PROD-789 fix(success-center): Ensured to have a clickable close action on mobile

--- a/src/styles/utilities/helpers/bootstrap/_modals.sass
+++ b/src/styles/utilities/helpers/bootstrap/_modals.sass
@@ -33,6 +33,7 @@
   .prev
     position: absolute
     top: 0
+    z-index: 1
   .close
     right: 0
   .prev
